export class ClassroomNews {}
