export class ClassroomStudent {
    student_id: string;
    classroom_id: string
}
