export class File {
    url: string;
    //student_activity_file?: StudentActivityFile;
    student_activity_id?: string;
}
