export class GeneralNews {}
