export class Student {
    id?: string;
    enrollment: number;
    course: string;
}
