export class Teacher {
    id?: string;
    cpf: string;
}